--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
 
 	<!-- jQuery -->
 	<script src="assets/js/jquery.min.js"></script>
-
 	<!-- Nice Scroll -->
 	<script src="assets/js/plugins/nicescroll/jquery.nicescroll.min.js"></script>
 	<!-- imagesLoaded -->
 	<script src="assets/js/plugins/imagesLoaded/jquery.imagesloaded.min.js"></script>
-	<!-- jQuery UI -->
-	<script src="assets/js/plugins/jquery-ui/jquery-ui.js"></script>
+		<!-- datepicker -->
+	<script src="assets/js/plugins/datepicker/bootstrap-datepicker.js"></script>
 	<!-- slimScroll -->
 	<script src="assets/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 	<!-- Bootstrap -->
@@ -76,7 +75,7 @@
 	<div id="navigation">
 		<div class="container-fluid">
 			<a href="#" id="brand">工程审计监管平台</a>
-			<a href="#" class="toggle-nav" rel="tooltip" data-placement="bottom" title="Toggle navigation">
+			<a href="#" class="toggle-nav" rel="tooltip" data-placement="bottom" title="折叠左侧导航">
 				<i class="fa fa-bars"></i>
 			</a>
 			<ul class='main-nav'>
@@ -201,11 +200,11 @@
 						</a>
 						<ul class="dropdown-menu pull-right theme-settings">
 							<li>
-								<span>页面Layout</span>
+								<span>页面布局</span>
 
 								<div class="version-toggle">
 									<a href="#" class="set-fixed">固定宽度</a>
-									<a href="#" class="active set-fluid">流式布局</a>
+									<a href="#" class="active set-fluid">自适应</a>
 								</div>
 							</li>
 						</ul>
