--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								<a href="#">
 									<div class="details">
 										<div class="message">
-											代办事项一
+											待办事项一
 										</div>
 									</div>
 								</a>
@@ -172,7 +172,7 @@
 								<a href="#">
 									<div class="details">
 										<div class="message">
-											代办事项二
+											待办事项二
 										</div>
 									</div>
 								</a>
@@ -181,7 +181,7 @@
 								<a href="#">
 									<div class="details">
 										<div class="message">
-											代办事项三
+											待办事项三
 										</div>
 									</div>
 								</a>
@@ -212,7 +212,8 @@
 				</ul>
 				<div class="dropdown">
 					<a href="#" class='dropdown-toggle' data-toggle="dropdown">
-						张三
+						<span>张三</span>
+						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu pull-right">
 						<li>
