--- a/project_register.html
+++ b/project_register.html
@@ -156,7 +156,7 @@
 				<ul class="icon-nav">
 					<li class='dropdown'>
 						<a href="#" class='dropdown-toggle' data-toggle="dropdown">
-							<i class="fa fa-envelope"></i>
+							<i class="glyphicon glyphicon-bell"></i>
 							<span class="label label-lightred">4</span>
 						</a>
 						<ul class="dropdown-menu pull-right message-ul">
@@ -164,7 +164,7 @@
 								<a href="#">
 									<div class="details">
 										<div class="message">
-											代办事项一
+											待办事项一
 										</div>
 									</div>
 								</a>
@@ -173,7 +173,7 @@
 								<a href="#">
 									<div class="details">
 										<div class="message">
-											代办事项二
+											待办事项二
 										</div>
 									</div>
 								</a>
@@ -182,7 +182,7 @@
 								<a href="#">
 									<div class="details">
 										<div class="message">
-											代办事项三
+											待办事项三
 										</div>
 									</div>
 								</a>
@@ -213,7 +213,8 @@
 				</ul>
 				<div class="dropdown">
 					<a href="#" class='dropdown-toggle' data-toggle="dropdown">
-						张三
+						<span>张三</span>
+						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu pull-right">
 						<li>
@@ -246,7 +247,7 @@
 				<ul class="subnav-menu">
 					<li class="active">
 						<a href="#">
-						项目注册
+						添加项目
 						</a>						
 					</li>
 					<li>
@@ -329,7 +330,8 @@
 								</h3>
 							</div>
 							<div class="box-content">
-								<form action="#" method="POST" class='form-horizontal form-validate' id="bb">
+								<form action="/" method="POST" 
+								class="form-horizontal form-validate"  id="bb">
 									<div class="form-group">
 										<label for="textfield" class="control-label col-sm-2">项目名称</label>
 										<div class="col-sm-10">
@@ -360,19 +362,18 @@
 										</div>
 									</div>
 									<div class="form-group">
-
 										<label for="confirmfield" class="control-label col-sm-2">项目描述
 										</label>
 										<div class="col-sm-10">
 											<form action="#" method="POST" class='form-wysiwyg'>
-											<textarea data-rule-required="true" name="ck" class='ckeditor span12' rows="5"></textarea></form>
+											<textarea data-rule-required="true" name="ck" class='ckeditor span12' rows="5"></textarea>
 										</div>
-	
 									</div>
 									<div class="form-actions">
-										<input type="submit" class="btn btn-primary" value="提交">
+										<input type="submit" class="btn btn-primary" value="提交"/>
+									</div>
 								</form>
-							</div>
+							</div>						
 						</div>
 					</div>
 				</div>
