--- a/add_company.html
+++ b/add_company.html
@@ -84,15 +84,51 @@
                     </ul> 
                     <div class="nav-contents">
                         <div class="tab-content" id="company-info">
+                            <form>
                             <div class="form-group">
                                 <label>企业名称</label>             
-                                <input type="text" class="text-word text-large"/>
-                                                             
+                                <input type="text" class="text-word text-input-long"/>                  
                             </div>
                             <div class="form-group">
                                 <label>企业资质</label>
-                                <input type="text" class="text-word text-medium"/>                      
-                            </div>                            
+                                <input type="text" class="text-word"/>
+                            </div>
+                            <div class="form-group">
+                                <label>地址</label>
+                                <input type="text" class="text-word text-input-long"/>                   
+                            </div>
+                            <div class="form-group">
+                                <label>邮箱</label>
+                                <input type="text" class="text-word text-input-long"/>                   
+                            </div>                               
+                            <div class="form-group">
+                                <label>法人姓名</label>
+                                <input type="text" class="text-word text-input"/>
+                                <label>移动电话</label>
+                                <input type="text" class="text-word text-input"/>                       
+                            </div>
+                            <div class="form-group">
+                                <label>进库时间</label>
+                                <input type="text" class="text-word text-input"/>                      
+                            </div>
+                            <div class="form-group">
+                                <label>备注</label>
+                                <input type="text" class="text-word text-input-long"/>                  
+                            </div>
+                            <div class="form-group">
+                                <label>附件</label>
+                                <input type="file"/>                  
+                            </div> 
+                            <div class="form-group">
+                                <label>用户名</label>
+                                <input type="text" class="text-word text-input"/>
+                                <label>密码</label>
+                                <input type="password" class="text-word text-input"/>                 
+                            </div>
+                            <div class="form-group form-action-group">
+                                <button type="submit" class="btn btn-submit-form">保存信息</button>
+                            </div>
+                            </form>               
                         </div>
                     </div>                   
                     <!-- end 标签页 -->
